<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textColor="@color/primary"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:src="@drawable/download"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_no"
            android:inputType="phone"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_button"
            android:backgroundTint="@color/btn"
            android:layout_marginBottom="16dp"/>

        <CheckBox
            android:id="@+id/cbActive"
            android:text="@string/active_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status: Unknown"
            android:textSize="25sp"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/statusBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_status"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Show Results"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</ScrollView>
